--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
 
         <div class="content">
-          Come slide into <a id="mapLink" href="">l3ycle's WORKADVENTURE</a>
+          Slide into <a id="mapLink" href="">l3ycle's WORKADVENTURE</a>
         </div>
 
         <div class="footer">
